--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,8 +50,7 @@
                 android:hint="Password"
                 android:inputType="textPassword"
                 tools:layout_editor_absoluteX="78dp"
-                tools:layout_editor_absoluteY="306dp"
-                tools:text="Password" />
+                tools:layout_editor_absoluteY="306dp" />
 
             <Button
                 android:id="@+id/signInButton"
